--- a/client-app/src/Pages/CSS/Apply.css
+++ b/client-app/src/Pages/CSS/Apply.css
@@ -1,5 +1,5 @@
 .form-full {
-    height: 100%;
+    height: 80%;
     margin: 0;
     display: flex;
     justify-content: center; /* Centers horizontally */
@@ -12,38 +12,30 @@
     padding: 30px;
     width: 100%;
     margin-top: 100px;
-    max-width: 500px; /* Set form width */
+    max-width: 600px; /* Set form width */
     border-radius: 10px;
-    border: 3px solid #56596c;
-    box-shadow: 0px 4px 6px #56596c; /* Soft shadow for better aesthetics */
+    box-shadow: 0 0 10px 5px var(--shadow-but);
     box-sizing: border-box;
   }
   
-  /* Styling labels */
-  .form-container label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #141619;
-  }
   
   /* Styling input, select, and textarea elements */
   .form-container input,
   .form-container select,
   .form-container textarea {
-    width: 100%;
-    padding: 7px;
-    margin-bottom: 15px;
-    border: 1px solid #56596c;
+    width: 90%;
+    padding: 6px;
+    margin-bottom: 10px;
+    border: 1px solid var(--grid);
     border-radius: 4px;
     box-sizing: border-box;
-    font-size: 16px; /* Improve text size for readability */
+    font-size: 14px; /* Improve text size for readability */
   }
   
   /* Ensure textarea resizes properly */
   .form-container textarea {
     resize: vertical;
-    min-height: 70px;
+    min-height: 50px;
   }
   
   /* Button styling */
@@ -53,26 +45,20 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    font-size: 16px;
-    margin-right: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-right: 30px;
   }
   
   /* Submit button styling */
   .form-container button {
-    background-color: #0A21C0;
+    background-color: var(--rest-but);
     color: white;
   }
   
   /* Submit button hover effect */
   .form-container button:hover {
-    background-color: #050A44;
+    font-weight: 600;
   }
   
-  /* Ensures responsiveness on smaller screens */
-  @media (max-width: 600px) {
-    .form-container {
-      padding: 20px;
-      max-width: 90%;
-    }
-  }
   
