--- a/client-app/src/Pages/CSS/Payment.css
+++ b/client-app/src/Pages/CSS/Payment.css
@@ -1,18 +1,21 @@
 
 /* Button Styling */
 .pay-btn {
-  width: 100%;
+  margin-top: 20px;
+  width: 50%;
   padding: 12px;
-  font-size: 18px;
-  background-color: #0A21C0;
+  font-size: 15px;
+  background-color: var(--rest-but);
   color: white;
-  border: 2px solid #050A44;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .pay-btn:hover {
-  background-color: #050A44;
-  color: white;
+  background-color: var(--hov-but);
+  color: black;
+  font-weight: 600;
+  border: 1.5px solid transparent; 
+  border-color: var(--rest-but);
 }
