--- a/client-app/src/Pages/CSS/Information.css
+++ b/client-app/src/Pages/CSS/Information.css
@@ -13,7 +13,8 @@
     flex: 1 0 calc(25% - 16px);
     height: 200px;
     max-width: calc(25% - 16px);
-    background-color: var(--grid);
+    background-color: var(--shadow-but);
+    border: 1px solid var(--grid);
     padding: 16px;
     border-radius: 8px;
     cursor: pointer;
@@ -22,7 +23,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
 }
 
 .details-box:hover {
