--- a/client-app/src/Pages/CSS/StudentHome.css
+++ b/client-app/src/Pages/CSS/StudentHome.css
@@ -1,4 +1,13 @@
 /* Container and layout styles */
+:root {
+  --rest-but: #101624;
+  --shadow-but: #dbe3ee;
+  --base: #eff1f5;
+  --box: white;
+  --header: #242e4c;
+  --hov-but: #9db2bf;
+  --grid:#526d82;
+}
 
 .container {
   display: flex;
